objects/bedrock__IdeaSubscription__c.object
<CustomObject>
    <description>Subscription object for Ideas Components by AdvancedCommunities</description>
    <fields>
        <fullName>bedrock__Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipName>Idea_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bedrock__Token__c</fullName>
        <description>Unique token string</description>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bedrock__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Idea_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Idea Subscription</label>
    <nameField>
        <displayFormat>SUB-{00000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idea Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>